After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 685895 - mpegvideoparse: signal interlacing correctly in caps using new "interlace-mode" field
mpegvideoparse: signal interlacing correctly in caps using new "interlace-mod...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.0.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-10-10 15:23 UTC by sreerenj
Modified: 2012-10-10 15:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
mpegvideoparse: setting "interlace-mode" in caps (1.03 KB, patch)
2012-10-10 15:23 UTC, sreerenj
committed Details | Review

Description sreerenj 2012-10-10 15:23:39 UTC
Created attachment 226181 [details] [review]
mpegvideoparse: setting "interlace-mode" in caps

mpegvideoparse: setting "interlace-mode" in caps
Comment 1 Tim-Philipp Müller 2012-10-10 15:58:56 UTC
Pushed, thanks!

commit 0b5fde7ed8d1917d917441cbc3ae3dd768ba03a9
Author: Sreerenj Balachandran <sreerenj.balachandran@intel.com>
Date:   Wed Oct 10 18:18:03 2012 +0300

    mpegvideoparse: signal interlacing properly in video caps
    
    The field is called "interlace-mode" mode now and is a string.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=685895