mpegvideoparse: signal interlacing properly in video caps

The field is called "interlace-mode" mode now and is a string.

https://bugzilla.gnome.org/show_bug.cgi?id=685895